# Penumbra

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  PERFORMANCE.md  PRD.md  PROGRESS.md  README.md
.github/workflows/: ci.yml  release.yml
benches/: full_scene.rs  gpu_render_bench.rs  instancing.rs  tile_streaming.rs
crates/penumbra-asset/: Cargo.toml
crates/penumbra-asset/src/: lib.rs
crates/penumbra-atmosphere/: Cargo.toml
crates/penumbra-atmosphere/src/: lib.rs
crates/penumbra-atmosphere/src/shaders/: atmosphere.wgsl
crates/penumbra-backend/: Cargo.toml  README.md
crates/penumbra-backend/src/: error.rs  lib.rs  traits.rs  types.rs
crates/penumbra-camera/: Cargo.toml  README.md
crates/penumbra-camera/src/: camera.rs  fly.rs  globe.rs  lib.rs  orbit.rs  ray.rs
crates/penumbra-cli/: Cargo.toml
crates/penumbra-cli/src/: main.rs
crates/penumbra-compute/: Cargo.toml
crates/penumbra-compute/src/: lib.rs
crates/penumbra-compute/src/shaders/: frustum_cull.wgsl
crates/penumbra-core/: Cargo.toml  README.md
crates/penumbra-core/src/: draw.rs  frame.rs  lib.rs  material.rs  renderer.rs
crates/penumbra-geo/: Cargo.toml  README.md
crates/penumbra-geo/src/: conversions.rs  distance.rs  lib.rs  position.rs  tile_math.rs
crates/penumbra-immediate/: Cargo.toml
crates/penumbra-immediate/src/: lib.rs
crates/penumbra-instance/: Cargo.toml
crates/penumbra-instance/src/: lib.rs
crates/penumbra-pbr/: Cargo.toml
crates/penumbra-pbr/src/: lib.rs
crates/penumbra-pbr/src/shaders/: lighting.wgsl  pbr.wgsl
crates/penumbra-post/: Cargo.toml
crates/penumbra-post/src/: lib.rs
crates/penumbra-post/src/shaders/: fxaa.wgsl  tone_mapping.wgsl
crates/penumbra-scene/: Cargo.toml
crates/penumbra-scene/src/: frustum.rs  lib.rs  light.rs  lod.rs  node.rs  scene.rs  transform.rs
crates/penumbra-shadow/: Cargo.toml
crates/penumbra-shadow/src/: lib.rs
crates/penumbra-shadow/src/shaders/: shadow.wgsl
crates/penumbra-terrain/: Cargo.toml
crates/penumbra-terrain/src/: lib.rs
crates/penumbra-text/: Cargo.toml
crates/penumbra-text/src/: lib.rs
crates/penumbra-text/src/shaders/: sdf_text.wgsl
crates/penumbra-web/: Cargo.toml
crates/penumbra-web/src/: lib.rs  wasm.rs
crates/penumbra-wgpu/: Cargo.toml
crates/penumbra-wgpu/src/: backend.rs  convert.rs  lib.rs  resources.rs
crates/penumbra-winit/: Cargo.toml
crates/penumbra-winit/src/: lib.rs
examples/globe/: Cargo.toml
examples/globe/src/: main.rs
examples/hello_cube/: Cargo.toml
examples/hello_cube/src/: main.rs
examples/instanced_entities/: Cargo.toml
examples/instanced_entities/src/: main.rs
examples/interactive_demo/: Cargo.toml
examples/interactive_demo/src/: main.rs  shader.wgsl
examples/pbr_scene/: Cargo.toml
examples/pbr_scene/src/: main.rs
examples/tactical_globe/: Cargo.toml
examples/tactical_globe/src/: main.rs
examples/wasm/: Cargo.toml  index.html
examples/wasm/src/: lib.rs
examples/windowed/: Cargo.toml
examples/windowed/src/: main.rs
src/: lib.rs
