[package]
name = "penumbra-camera"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Camera system for Penumbra — perspective, orthographic, orbit, fly controllers"

[dependencies]
penumbra-core = { path = "../penumbra-core" }
glam = { workspace = true, features = ["serde"] }
serde = { workspace = true }
