[package]
name = "penumbra-immediate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Immediate mode rendering for Penumbra"

[dependencies]
penumbra-core = { path = "../penumbra-core" }
penumbra-backend = { path = "../penumbra-backend" }
glam = { workspace = true }
bytemuck = { workspace = true }
