[package]
name = "penumbra-pbr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "PBR rendering pipeline for Penumbra"

[dependencies]
penumbra-core = { path = "../penumbra-core" }
penumbra-backend = { path = "../penumbra-backend" }
glam = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
