[package]
name = "penumbra-terrain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "Tile-based terrain streaming for Penumbra"

[dependencies]
penumbra-core = { path = "../penumbra-core" }
penumbra-backend = { path = "../penumbra-backend" }
glam = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
