[package]
name = "penumbra-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "WASM browser target for Penumbra"

[dependencies]
penumbra-core = { path = "../penumbra-core" }
penumbra-backend = { path = "../penumbra-backend" }
tracing = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Navigator",
    "Gpu",
    "WebGl2RenderingContext",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
