[package]
name = "penumbra-wgpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "wgpu backend implementation for Penumbra"

[dependencies]
penumbra-backend = { path = "../penumbra-backend" }
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
pollster = { workspace = true }
