[package]
name = "penumbra-winit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false
description = "winit integration for Penumbra"

[dependencies]
penumbra-core = { path = "../penumbra-core" }
penumbra-backend = { path = "../penumbra-backend" }
winit = { workspace = true }
tracing = { workspace = true }
glam = { workspace = true }
