[package]
name = "hello_cube"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
penumbra-core = { path = "../../crates/penumbra-core" }
penumbra-backend = { path = "../../crates/penumbra-backend" }
penumbra-wgpu = { path = "../../crates/penumbra-wgpu" }
penumbra-camera = { path = "../../crates/penumbra-camera" }
penumbra-scene = { path = "../../crates/penumbra-scene" }
penumbra-pbr = { path = "../../crates/penumbra-pbr" }
penumbra-asset = { path = "../../crates/penumbra-asset" }
glam = { version = "0.29", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
