[package]
name = "pbr_scene"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
penumbra-core = { path = "../../crates/penumbra-core" }
penumbra-backend = { path = "../../crates/penumbra-backend" }
penumbra-wgpu = { path = "../../crates/penumbra-wgpu" }
penumbra-camera = { path = "../../crates/penumbra-camera" }
penumbra-scene = { path = "../../crates/penumbra-scene" }
penumbra-pbr = { path = "../../crates/penumbra-pbr" }
penumbra-asset = { path = "../../crates/penumbra-asset" }
penumbra-post = { path = "../../crates/penumbra-post" }
penumbra-shadow = { path = "../../crates/penumbra-shadow" }
glam = { version = "0.29", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
