[package]
name = "tactical_globe"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
penumbra-core = { path = "../../crates/penumbra-core" }
penumbra-backend = { path = "../../crates/penumbra-backend" }
penumbra-wgpu = { path = "../../crates/penumbra-wgpu" }
penumbra-camera = { path = "../../crates/penumbra-camera" }
penumbra-scene = { path = "../../crates/penumbra-scene" }
penumbra-geo = { path = "../../crates/penumbra-geo" }
penumbra-terrain = { path = "../../crates/penumbra-terrain" }
penumbra-atmosphere = { path = "../../crates/penumbra-atmosphere" }
penumbra-instance = { path = "../../crates/penumbra-instance" }
penumbra-text = { path = "../../crates/penumbra-text" }
penumbra-immediate = { path = "../../crates/penumbra-immediate" }
penumbra-pbr = { path = "../../crates/penumbra-pbr" }
penumbra-post = { path = "../../crates/penumbra-post" }
glam = { version = "0.29", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
