[package]
name = "windowed"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
penumbra-core = { path = "../../crates/penumbra-core" }
penumbra-backend = { path = "../../crates/penumbra-backend" }
penumbra-wgpu = { path = "../../crates/penumbra-wgpu" }
penumbra-camera = { path = "../../crates/penumbra-camera" }
penumbra-asset = { path = "../../crates/penumbra-asset" }
glam = { version = "0.29", features = ["serde"] }
winit = "0.30"
tracing = "0.1"
tracing-subscriber = "0.3"
